# gajae-code

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.dockerignore  Dockerfile.robogjc  README.md  bunfig.toml  package.json  tsconfig.base.json  tsconfig.json  tsconfig.tools.json
.github/: PULL_REQUEST_TEMPLATE.md
artifacts/: arch-review-footprint-N1-darwin-arm64.json  arch-review-footprint-N1-darwin-arm64.summary.txt  arch-review-footprint-summary.json  architecture-2383-eval.json  ask-tui-hang-qa-report.json  ask-tui-hang-quality-gate.json  btw-fallback-ci-test-report.json  compaction-mining-v2.json  context-usage-ssot-cli-replay.json  context-usage-ssot-qa-report.json  context-usage-tui-transcript.txt  deep-interview-cli-final-report.json  deep-interview-cli-replay.json  g001-cli-replay.json  g001-package-qa-report.json  g003-qa-report.json  g003-release-0.10.1-report.json  g004-cli-replay.json  (+42 more)
crates/gjc-rpc-sdk/: Cargo.toml
crates/gjc-rpc-sdk/src/: authz_eval.rs  backpressure.rs  broker_correlation.rs  brokers.rs  classifier.rs  cross_transport.rs  daemon.rs  daemon_server.rs  in_process.rs  lib.rs  logical_equality.rs  observability_ext.rs  peer_cred.rs  redactor.rs  registry.rs  replay_store.rs  session_scheduler.rs  uds_codec.rs  uds_transport.rs  worker_supervisor.rs
crates/gjc-rpc-sdk/tests/: runtime_io_conformance.rs
docs/: rpc.md  (+44 more)
python/gjc-sdk/: pyproject.toml
python/gjc-sdk/gjc_sdk/: __init__.py  client.py  discovery.py  frames.py  transport.py
python/gjc-sdk/tests/: test_client.py  test_discovery.py  test_frames.py  test_vectors.py
(+325 files in other folders)
