[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gjc_sdk"
version = "0.1.0"
description = "Typed Python client for the GJC SDK v3 protocol"
requires-python = ">=3.10"
dependencies = ["websockets>=12,<14"]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "mypy", "build"]

[tool.setuptools.package-data]
gjc_sdk = ["py.typed"]

[tool.mypy]
strict = true
